# projects

./: .gitignore  README.md
.github/workflows/: doxygen.yml
2024/Ludo/: README.md  main.py
2024/Ludo/docs/: programmer.md  user.md
2024/Ludo/project/: logic.py  paths.py  ui.py
2025/ChramOS/: .gitignore  .gitlab-ci.yml  configure.py  msim.conf
2025/ChramOS/kernel/: Makefile
2025/ChramOS/kernel/boot/: loader.S
2025/ChramOS/kernel/include/: abi.h  debug.h  exc.h
2025/ChramOS/kernel/include/adt/: bitmap.h  list.h
2025/ChramOS/kernel/include/debug/: code.h
2025/ChramOS/kernel/include/drivers/: csr.h  machine.h  mmu.h  sv32.h  timer.h
2025/ChramOS/kernel/include/exc/: context.h
2025/ChramOS/kernel/include/ktest/: barrier.h  frame.h  heap.h  leak.h
2025/ChramOS/kernel/include/lib/: print.h
2025/ChramOS/kernel/include/mm/: as.h  frame.h  heap.h  self.h
2025/ChramOS/kernel/include/proc/: context.h  mutex.h  process.h  scheduler.h  sem.h  thread.h
2025/ChramOS/kernel/src/: head.S
2025/ChramOS/kernel/src/adt/: bitmap.c
2025/ChramOS/kernel/src/debug/: code.c
2025/ChramOS/kernel/src/exc/: exc.c  handlers.S  syscall.c
2025/ChramOS/kernel/src/lib/: print.c
2025/ChramOS/kernel/src/mm/: as.c  frame.c  heap.c
2025/ChramOS/kernel/src/proc/: context.S  mutex.c  process.c  scheduler.c  sem.c  thread.c  userspace.S
2025/ChramOS/kernel/tests/: leak.c
2025/ChramOS/suites/: m03-base.txt  m03-thread-leaks.txt  m06-as-base-fuzzy.txt  m06-as-leaks.txt  m06-as-on-demand.txt  m06-as-recycle-fuzzy.txt  m06-as-recycle.txt  m06-as-steal-fuzzy.txt  m06-as-steal.txt  m06-base.txt  m07-base.txt
2025/ChramOS/tools/: check_cstyle.sh  ci.sh  ide_setup.py  key_dashboard  tester.py
2025/ChramOS/userspace/: Makefile  app.lds
2025/ChramOS/userspace/libc/: Makefile
2025/ChramOS/userspace/libc/src/: entry.S  heap.c  main.c  print.c  proc.c  stackspace.S
2025/Event handler/: .gitignore  README.md
2025/Event handler/semestral-project/private/: component_manager.php  config.php
2025/Event handler/semestral-project/private/models/: default_model.php  event_edit_model.php  event_model.php  event_register_model.php  landing_page_model.php  list_events_mine_model.php  list_events_model.php  login_model.php  new_event_model.php  register_model.php  settings_model.php
2025/Event handler/semestral-project/private/presenters/: event_edit_presenter.php  (+9 more)
2025/Event handler/semestral-project/public/: index.php
2025/Event handler/semestral-project/src/: router.php
2025/Forest simulation/: README.md
2025/Forest simulation/Fire_simulation/: Cell.cs  FireFighter.cs  Fire_simulation.sln  Forest.cs  ForestRenderer.cs  Program.cs  UI.Designer.cs  UI.cs  UI.resx
2025/Forest simulation/docs/: programmer.md  user.md
2025/Nonogram/: README.md  formula.cnf  solver.py
2025/Nonogram/tests/: bird.txt  cactus.txt  cross.txt  heart.txt  something.txt  unsolvable.txt
2026/Preferans/: README.md
2026/Preferans/docs/: Doxyfile  README.md  programmer_documentation.md  user_documentation.md
2026/Preferans/src/Preferans/: CMakeLists.txt  Preferans.cpp  Preferans.h  Preferans.hpp
2026/Preferans/src/Preferans/cmake/Modules/: FindSFML.cmake
2026/Preferans/src/Preferans/include/: BiddingGrid.hpp  Button.hpp  Card.hpp  Game.hpp  GameConfig.hpp  Minimax.hpp  Player.hpp  UI.hpp
2026/Preferans/src/Preferans/src/: BiddingGrid.cpp  Button.cpp  Button.h  Card.cpp  Card.h  Game.cpp  Game.h  GameConfig.h  Minimax.cpp  Player.cpp  Player.h  UI.cpp  UI.h
(+75 files in other folders)
